--- a/packages/api-generator/src/locale/en/v-btn-toggle.json
+++ b/packages/api-generator/src/locale/en/v-btn-toggle.json
@@ -9,6 +9,11 @@
     "tile": "Removes the component's border-radius."
   },
   "events": {
-    "change": "Emitted when the input is changed by user interaction"
+    "update:modelValue": "Emitted when the input is changed by user interaction"
+  },
+  "exposed": {
+    "next": "Activates the next button",
+    "prev": "Activates the previous button",
+    "select": "Selects a button by index, the second parameter is a boolean to indicate if the button should be selected or not"
   }
 }
