--- a/packages/api-generator/src/locale/en/v-chip-group.json
+++ b/packages/api-generator/src/locale/en/v-chip-group.json
@@ -7,9 +7,11 @@
     "nextIcon": "Specify the icon to use for the next icon",
     "prependIcon": "This icon used in the prepend slot (if shown)",
     "prevIcon": "Specify the icon to use for the prev icon",
-    "showArrows": "Force the display of the pagination arrows"
+    "showArrows": "Force the display of the pagination arrows",
+    "filter": "Applies an checkmark icon in front of every chip for using it like a filter",
+    "disabled": "Disable the events emitted by the component"
   },
   "events": {
-    "change": "Emitted when the component value is changed by user interaction"
+    "update:modelValue": "Emitted when the component value is changed by user interaction"
   }
 }
