docs: fixes prop name (#15961)
fixes #15955

`append-outer-icon` => `append-icon`

## Types of changes
<!-- What types of changes does your code introduce? Put an `x` in all
the boxes that apply: -->
- [x] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] Improvement/refactoring (non-breaking change that doesn't add any
features but makes things better)

--- a/packages/api-generator/src/locale/en/v-text-field.json
+++ b/packages/api-generator/src/locale/en/v-text-field.json
@@ -1,6 +1,7 @@
 {
   "props": {
-    "appendOuterIcon": "Appends an icon to the outside the component's input, uses same syntax as `v-icon`",
+    "appendIcon": "Appends an icon to the outside the component's input, uses same syntax as `v-icon`",
+    "appendInnerIcon": "Appends an icon inside the component's input, uses same syntax as `v-icon`",
     "autoGrow": "Auto-grows the input. This option requires the use of **v-model**",
     "autofocus": "Enables autofocus",
     "filled": "Applies the alternate filled input style",
@@ -15,6 +16,7 @@
     "persistentPlaceholder": "Forces placeholder to always be visible",
     "placeholder": "Sets the input’s placeholder text",
     "prefix": "Displays prefix text",
+    "prependIcon": "Prepends an icon to the outnside the component's input, uses the same syntax as `v-icon`",
     "prependInnerIcon": "Prepends an icon inside the component's input, uses the same syntax as `v-icon`",
     "reverse": "Reverses the input orientation",
     "rounded": "Adds a border radius to the input",
