docs(API): update v-alert props

--- a/packages/api-generator/src/locale/en/density.json
+++ b/packages/api-generator/src/locale/en/density.json
@@ -1,5 +1,5 @@
 {
   "props": {
-    "density": "Adjusts the spacing within the component. Available options are: **default**, **comfortable**, and **compact**."
+    "density": "Adjusts vertical spacing within the component. Available options are: **default**, **comfortable**, and **compact**."
   }
 }
