--- a/packages/api-generator/src/locale/en/variant.json
+++ b/packages/api-generator/src/locale/en/variant.json
@@ -1,5 +1,5 @@
 {
   "props": {
-    "variant": "Applies one of 6 styles: **elevated**(default), **flat**, **tonal**, **outlined**, **text**, and **plain**."
+    "variant": "Applies one of 6 styles: **elevated**, **flat**, **tonal**, **outlined**, **text**, and **plain**."
   }
 }
