docs(en): update cookie language

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -61,7 +61,7 @@
   "community": "Community",
   "community-support": "Community support",
   "contact-us": "Contact Us",
-  "cookie-policy": "Cookie policy",
+  "cookie-policy": "Cookie Policy",
   "copy-example-source": "Copy example source",
   "copyright": "Copyright {0}",
   "customization": "Customization",
