docs(AppBar): add releases-menu, update item visibility logic

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -110,6 +110,7 @@
   "jobs": "Jobs",
   "jobs-for-vue": "Jobs for Vue",
   "laptop": "Laptop",
+  "languages": "Languages",
   "large": "Large",
   "latest-release": "Latest release",
   "layout": "Layout",
