--- a/packages/api-generator/src/locale/en/v-select.json
+++ b/packages/api-generator/src/locale/en/v-select.json
@@ -19,7 +19,7 @@
     "items": "Can be an array of objects or array of strings. When using objects, will look for a title, value and disabled keys. This can be changed using the **item-title**, **item-value** and **item-disabled** props.  Objects that have a **header** or **divider** property are considered special cases and generate a list header or divider; these items are not selectable.",
     "itemText": "Set property of **items**'s title value",
     "itemValue": "Set property of **items**'s value - **must be primitive**. Dot notation is supported. **Note:** This is currently not supported with `v-combobox` [GitHub Issue](https://github.com/vuetifyjs/vuetify/issues/5479)",
-    "menuProps": "Pass props through to the `v-menu` component. Accepts either a string for boolean props `menu-props=\"auto, overflowY\"`, or an object `:menu-props=\"{ auto: true, overflowY: true }\"`",
+    "menuProps": "Pass props through to the `v-menu` component. Accepts an object with anything from [/api/v-menu](/api/v-menu/#props), camelCase keys are recommended.",
     "minWidth": "Sets the minimum width of the select's `v-menu` content",
     "multiple": "Changes select to multiple. Accepts array for value",
     "multiLine": "Causes label to float when the select component is focused or dirty",
