--- a/packages/api-generator/src/locale/en/v-toolbar.json
+++ b/packages/api-generator/src/locale/en/v-toolbar.json
@@ -14,7 +14,10 @@
     "src": "Specifies a [v-img](/components/images) as the component's background."
   },
   "slots": {
-    "extension": "Slot positioned directly under the main content of the toolbar. Height of this slot can be set explicitly with the **extension-height** prop. If this slot has no content, the **extended** prop may be used instead.",
-    "img": "Expects the [v-img](/components/images) component. Scoped **props** should be applied with `v-bind=\"props\"`."
+    "append": "Adds an item before the toolbar content",
+    "extension": "Slot positioned directly under the main content of the toolbar. Height of this slot can be set explicitly with the **extension-height** prop.",
+    "image": "Expects the [`v-img`](/components/images/) component.",
+    "prepend": "Adds an item after the toolbar content",
+    "title": "Slot containing the toolbar title"
   }
 }
