docs(ui-kits): add back page

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -205,6 +205,7 @@
   "type": "Type | Types",
   "twitter": "Twitter",
   "ui-components": "UI Components",
+  "ui-kits": "UI Kits",
   "ui": "UI",
   "ultra-wide": "Ultra-wide",
   "unread": "View Unread ({number})",
