docs(AppBar): update content

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -140,6 +140,7 @@
   "phone": "Phone",
   "pickers": "Pickers",
   "platinum-sponsors": "Platinum Sponsors",
+  "playground": "Playground",
   "policy": "Policy",
   "premiere-sponsors": "Premiere Sponsors",
   "premium": "Premium",
