docs(AppBar): update style and content (#16311)

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -171,8 +171,10 @@
   "rtl": "RTL",
   "scroll-to-top": "Scroll to top",
   "search": {
-    "placeholder": "Search Vuetify",
-    "key-hint": "(press /)"
+    "label": "Search",
+    "looking": "Looking for",
+    "key-hint": "Press /",
+    "results": "Your search results will appear here"
   },
   "search-api": "Search API",
   "search-jobs": "Search Jobs",
