docs(AppBar): update app-menu component lists

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -91,6 +91,7 @@
   "features": "Features",
   "file-a-bug-report": "File a bug report",
   "focus": "Focus",
+  "for-enterprise": "For Enterprise",
   "form-inputs-and-controls": "Form inputs & controls",
   "framework-services": "Framework services",
   "functional": "Functional",
@@ -103,6 +104,7 @@
   "grid": "Grid",
   "groups": "Groups",
   "guide": "Guide",
+  "help-and-support": "Help and support",
   "homepage": "Vuetify Home Page",
   "inline": "Inline",
   "introduction": "Introduction",
@@ -113,6 +115,7 @@
   "languages": "Languages",
   "large": "Large",
   "latest-release": "Latest release",
+  "latest-releases": "Latest releases",
   "layout": "Layout",
   "layout-link": "Link to layout for {name}",
   "learn": "Learn",
@@ -203,6 +206,7 @@
     "demo": "Request a demo",
     "more": "Learn more"
   },
+  "tools": "Tools",
   "transition": "Transition",
   "translations": "Translations",
   "type": "Type | Types",
@@ -211,6 +215,7 @@
   "ui-kits": "UI Kits",
   "ui": "UI",
   "ultra-wide": "Ultra-wide",
+  "upgrade-guide": "Upgrade guide",
   "unread": "View Unread ({number})",
   "updated": "Updated",
   "video-courses": "Video courses",
