docs(en.json): add missing language key

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -186,6 +186,7 @@
   "services": "Services",
   "settings": "Settings",
   "small": "Small",
+  "social": "Social",
   "sponsor": "Sponsor",
   "sponsors": "Sponsors",
   "stack-overflow": "Stack overflow",
