docs(Contribute): create doc component

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -82,6 +82,7 @@
   "discord": "Discord",
   "done": "All done",
   "edit-in-codepen": "Edit in Codepen",
+  "edit-this-page": "Edit this page on",
   "edit": "Edit",
   "enterprise": "Enterprise",
   "email-address": "Email address",
