docs(Releases): port github api call to pinia, update styling

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -122,6 +122,7 @@
   "learn": "Learn",
   "light": "Light",
   "link-only": "Link Only",
+  "load-more": "Load more...",
   "logo": "Vuetify Logo",
   "ltr": "LTR",
   "marked-read": "Mark all read",
