--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -112,6 +112,7 @@
   "invert-example-colors": "Invert example colors",
   "jobs": "Jobs",
   "jobs-for-vue": "Jobs for Vue",
+  "labs": "Labs",
   "laptop": "Laptop",
   "languages": "Languages",
   "large": "Large",
