--- a/packages/api-generator/src/locale/en/delay.json
+++ b/packages/api-generator/src/locale/en/delay.json
@@ -1,6 +1,6 @@
 {
   "props": {
-    "closeDelay": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/delay.json))",
-    "openDelay": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/delay.json))"
+    "closeDelay": "Milliseconds to wait before closing component. Only applies to hover and focus events.",
+    "openDelay": "Milliseconds to wait before opening component. Only applies to hover and focus events."
   }
 }
