--- a/packages/api-generator/src/locale/en/focus.json
+++ b/packages/api-generator/src/locale/en/focus.json
@@ -1,5 +1,5 @@
 {
   "props": {
-    "focused": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/focus.json))"
+    "focused": "Forces a focused state styling on the component."
   }
 }
