docs(v-text-field): api information for update modelValue (#16452)

--- a/packages/api-generator/src/locale/en/v-text-field.json
+++ b/packages/api-generator/src/locale/en/v-text-field.json
@@ -62,7 +62,7 @@
     "click:control": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-text-field.json))",
     "click:input": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-text-field.json))",
     "update:focused": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-text-field.json))",
-    "update:modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-text-field.json))"
+    "update:modelValue": "The update:modelValue event is emitted when the value of the input field changes. This event is emitted with the updated value as its argument, which can be used to update the value of the corresponding variable in your Vue component's data."
   },
   "exposed": {
     "reset": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-text-field.json))",
