--- a/packages/api-generator/src/locale/en/v-label.json
+++ b/packages/api-generator/src/locale/en/v-label.json
@@ -1,6 +1,6 @@
 {
   "props": {
-    "text": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-label.json))",
+    "text": "Specify the displayed label text",
     "clickable": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-label.json))"
   }
 }
