--- a/packages/api-generator/src/locale/en/v-list-item.json
+++ b/packages/api-generator/src/locale/en/v-list-item.json
@@ -5,7 +5,7 @@
     "activeColor": "The applied color when a `v-list-item` is in an active state",
     "appendAvatar": "Appends a [v-avatar](/components/avatars/) component to the header",
     "appendIcon": "Appends a [v-icon](/components/icons/) component to the header",
-    "color": "Applies specified color to the control when in an **active** state or **input-value** is **true** - it can be the name of material color (for example `success` or `purple`) or css color (`#033` or `rgba(255, 0, 0, 0.5)`)",
+    "color": "Applies specified color to the control when in an **active** state or **input-value** is **true** - supports utility colors (for example `success` or `purple`) or css color (for example `success` or `purple`) or css color (`#033` or `rgba(255, 0, 0, 0.5)`). Find a list of built-in classes on the [colors page](/styles/colors#material-colors)",
     "contained": "Changes the component style by changing how color is applied to the background.",
     "disabled": "Disables the component",
     "prependAvatar": "Prepends a [v-avatar](/components/avatars/) component to the header",
