--- a/packages/api-generator/src/locale/en/v-timeline-item.json
+++ b/packages/api-generator/src/locale/en/v-timeline-item.json
@@ -1,7 +1,7 @@
 {
   "props": {
     "alignDot": "Align the dot to the **start** or **end** of the item",
-    "color": "Color of the item dot",
+    "color": "Applies specified color to the item dot - supports utility colors (for example `success` or `purple`) or css color (for example `success` or `purple`) or css color (`#033` or `rgba(255, 0, 0, 0.5)`). Find a list of built-in classes on the [colors page](/styles/colors#material-colors)",
     "fillDot": "Remove outer border of item dot, making the color fill the entire dot",
     "hideDot": "Hide the timeline item dot",
     "hideOpposite": "Hide opposite content if it exists",
