--- a/packages/api-generator/src/locale/en/v-treeview.json
+++ b/packages/api-generator/src/locale/en/v-treeview.json
@@ -3,7 +3,7 @@
     "activatable": "Allows user to mark a node as active by clicking on it",
     "active": "Syncable prop that allows one to control which nodes are active. The array consists of the `item-key` of each active item.",
     "activeClass": "The class applied to the node when active",
-    "color": "Sets the color of the active node",
+    "color": "Applies specified color to the active node - supports utility colors (for example `success` or `purple`) or css color (for example `success` or `purple`) or css color (`#033` or `rgba(255, 0, 0, 0.5)`). Find a list of built-in classes on the [colors page](/styles/colors#material-colors)",
     "dense": "Decreases the height of the items",
     "disabled": "Disables selection for all nodes",
     "disablePerNode": "Prevents disabling children nodes",
