--- a/packages/api-generator/src/locale/en/v-app.json
+++ b/packages/api-generator/src/locale/en/v-app.json
@@ -1,8 +1,6 @@
 {
   "props": {},
   "exposed": {
-    "getLayoutItem": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-app.json))",
-    "items": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-app.json))",
-    "theme": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-app.json))"
+    "theme": "The instance of the injected active theme"
   }
 }
