--- a/packages/api-generator/src/locale/en/form.json
+++ b/packages/api-generator/src/locale/en/form.json
@@ -1,6 +1,6 @@
 {
   "props": {
-    "disabled": "Puts all children inputs into a disabled state.",
+    "disabled": "Puts all children inputs into a disabled state",
     "fastFail": "Stop validation as soon as any rules fail.",
     "lazyValidation": "If enabled, value will always be true unless there are visible validation errors. You can still call validate() to manually trigger validation.",
     "readonly": "Puts all children inputs into a readonly state.",
