--- a/packages/api-generator/src/locale/en/group.json
+++ b/packages/api-generator/src/locale/en/group.json
@@ -1,11 +1,12 @@
 {
   "props": {
+    "disabled": "Puts all children components into a disabled state",
     "modelValue": "Represents the selected item(s). Will be an array if **multiple** prop is used.",
     "mandatory": "Forces at least one item to always be selected (if available).",
     "max": "Sets a maximum number of selections that can be made.",
     "multiple": "Allows one to select mulitple items.",
     "selectedClass": "Configure the selected CSS class.",
-    "disabled": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/group.json))"
+    "value": "The value used when the component is selected within a group. If not provided, the render index is used"
   },
   "events": {
     "update:modelValue": "Emitted when selection changes"
