--- a/packages/api-generator/src/locale/en/router.json
+++ b/packages/api-generator/src/locale/en/router.json
@@ -1,5 +1,6 @@
 {
   "props": {
+    "activeClass": "The class applied to the component when it matches the current route. Find more information about the [active-class prop](https://router.vuejs.org/api/#active-class) on the [vue-router](https://router.vuejs.org/) documentation",
     "href": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/router.json))",
     "replace": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/router.json))",
     "exact": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/router.json))",
