--- a/packages/api-generator/src/locale/en/v-form.json
+++ b/packages/api-generator/src/locale/en/v-form.json
@@ -1,6 +1,6 @@
 {
   "props": {
-    "disabled": "Puts all children inputs into a disabled state.",
+    "disabled": "Puts all children inputs into a disabled state",
     "lazyValidation": "If enabled, **value** will always be _true_ unless there are visible validation errors. You can still call `validate()` to manually trigger validation",
     "readonly": "Puts all children inputs into a readonly state.",
     "value": "A boolean value representing the validity of the form."
