--- a/packages/api-generator/src/locale/en/v-list-group.json
+++ b/packages/api-generator/src/locale/en/v-list-group.json
@@ -1,8 +1,7 @@
 {
   "props": {
-    "activeClass": "Configure the active CSS class applied when the link is active. You can find more information about the [**active-class** prop](https://router.vuejs.org/api/#active-class) on the vue-router documentation.",
     "appendIcon": "Appends an icon to the component, uses the same syntax as `v-icon`",
-    "disabled": "Disables all children `v-list-item` components",
+    "disabled": "Puts all children inputs into a disabled state",
     "group": "Assign a route namespace. Accepts a string or regexp for determining active state",
     "noAction": "Removes left padding assigned for action icons from group items",
     "prependIcon": "Prepends an icon to the component, uses the same syntax as `v-icon`",
