--- a/packages/api-generator/src/locale/en/v-alert.json
+++ b/packages/api-generator/src/locale/en/v-alert.json
@@ -19,7 +19,7 @@
     "title": "Specify title text for the alert.",
     "transition": "Sets the component transition. Can be one of the [built in transitions](/styles/transitions) or one your own.",
     "type": "Specify a **success**, **info**, **warning** or **error** alert. Uses the contextual color and has a pre-defined icon.",
-    "value": "Controls whether the component is visible or hidden.",
+    "model-value": "Controls whether the component is visible or hidden.",
     "width": "Sets the width for the component.",
     "modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-alert.json))"
   },
@@ -30,8 +30,5 @@
   },
   "functions": {
     "toggle": "Toggles the alert's active state. Available in the close slot and used as the click action in **dismissible**."
-  },
-  "events": {
-    "update:modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-alert.json))"
   }
 }
