--- a/packages/api-generator/src/locale/en/v-dialog.json
+++ b/packages/api-generator/src/locale/en/v-dialog.json
@@ -16,8 +16,7 @@
   },
   "events": {
     "click:outside": "Event that fires when clicking outside an active dialog.",
-    "keydown": "Event that fires when key is pressed. If dialog is active and not using the **persistent** prop, the **esc** key will deactivate it.",
-    "update:modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-dialog.json))"
+    "keydown": "Event that fires when key is pressed. If dialog is active and not using the **persistent** prop, the **esc** key will deactivate it."
   },
   "slots": {
     "default": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-dialog.json))",
