--- a/packages/api-generator/src/locale/en/v-form.json
+++ b/packages/api-generator/src/locale/en/v-form.json
@@ -7,7 +7,7 @@
   },
   "events": {
     "submit": "Emitted when form is submitted",
-    "update:modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))"
+    "update:modelValue": "Event emitted when the form's validity changes"
   },
   "functions": {
     "reset": "Resets the state of all registered inputs (inside the form) to **{}** for arrays and **null** for all other values. Resets errors bag when using the **lazy-validation** prop.",
