--- a/packages/api-generator/src/locale/en/v-radio-group.json
+++ b/packages/api-generator/src/locale/en/v-radio-group.json
@@ -11,7 +11,6 @@
   "events": {
     "change": "Emitted when the input is changed by user interaction",
     "click:prepend": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-radio-group.json))",
-    "click:append": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-radio-group.json))",
-    "update:modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-radio-group.json))"
+    "click:append": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-radio-group.json))"
   }
 }
