--- a/packages/api-generator/src/locale/en/v-window.json
+++ b/packages/api-generator/src/locale/en/v-window.json
@@ -16,8 +16,7 @@
     "mandatory": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-window.json))"
   },
   "events": {
-    "change": "Emitted when the component value is changed by user interaction",
-    "update:modelValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-window.json))"
+    "change": "Emitted when the component value is changed by user interaction"
   },
   "slots": {
     "next": "Slot displaying the arrow switching to the next item",
