--- a/packages/docs/src/i18n/locales.json
+++ b/packages/docs/src/i18n/locales.json
@@ -17,6 +17,30 @@
     "enabled": false
   },
   {
+    "title": "Deutsch",
+    "locale": "de-DE",
+    "alternate": "de",
+    "enabled": false
+  },
+  {
+    "title": "Français",
+    "locale": "fr-FR",
+    "alternate": "fr",
+    "enabled": false
+  },
+  {
+    "title": "Русский",
+    "locale": "ru-RU",
+    "alternate": "ru",
+    "enabled": false
+  },
+  {
+    "title": "한국어",
+    "locale": "ko-KR",
+    "alternate": "ko",
+    "enabled": false
+  },
+  {
     "title": "Help translate",
     "locale": "eo-UY",
     "enabled": false
