--- a/packages/api-generator/src/locale/en/v-form.json
+++ b/packages/api-generator/src/locale/en/v-form.json
@@ -9,19 +9,14 @@
     "submit": "Emitted when form is submitted",
     "update:modelValue": "Event emitted when the form's validity changes"
   },
-  "functions": {
-    "reset": "Resets the state of all registered inputs (inside the form) to **{}** for arrays and **null** for all other values. Resets errors bag when using the **lazy-validation** prop.",
-    "resetValidation": "Resets validation of all registered inputs without modifying their state",
-    "validate": "Validates all registered inputs. Returns **true** if successful and **false** if not"
-  },
   "exposed": {
-    "errors": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))",
-    "isDisabled": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))",
-    "isReadonly": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))",
-    "isValidating": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))",
-    "items": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))",
-    "validate": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))",
-    "reset": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))",
-    "resetValidation": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/next/packages/api-generator/src/locale/en/v-form.json))"
+    "errors": "Contains all current form input errors.",
+    "isDisabled": "Indicates if form is disabled or not.",
+    "isReadonly": "Indicates if form is readonly or not",
+    "isValidating": "Indicates if form is currently being validated or not.",
+    "items": "Array of all registered inputs.",
+    "validate": "Validates all registered inputs.",
+    "reset": "Resets validation of all registered inputs, and clears their values.",
+    "resetValidation": "Resets validation of all registered inputs without modifying their values."
   }
 }
